import {describe, expect, it} from 'vitest'
import {render} from '@testing-library/react'
import type {PopoverProps} from '../Popover'
import Popover from '../Popover'
import classes from './Popover.module.css'
import {implementsClassName} from '../utils/testing'

describe('Popover', () => {
  implementsClassName(Popover, classes.Popover)
  implementsClassName(Popover.Content, classes.PopoverContent)

  const CARET_POSITIONS: PopoverProps['caret'][] = [
    'top',
    'bottom',
    'left',
    'right',
    'bottom-left',
    'bottom-right',
    'top-left',
    'top-right',
    'left-bottom',
    'left-top',
    'right-bottom',
    'right-top',
  ]

  for (const pos of CARET_POSITIONS) {
    it(`renders correctly for a caret position of ${pos}`, () => {
      const element = (
        <Popover caret={pos} open>
          <Popover.Content>Hello!</Popover.Content>
        </Popover>
      )

      const {container} = render(element)
      expect(container.firstChild).toHaveAttribute('data-caret', pos)
    })
  }

  it('renders both elements as a <div>', () => {
    const {container: popoverContainer} = render(<Popover />)
    const {container: contentContainer} = render(<Popover.Content />)
    expect((popoverContainer.firstChild as Element).tagName).toEqual('DIV')
    expect((contentContainer.firstChild as Element).tagName).toEqual('DIV')
  })
})
