// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover renders correctly for a caret position of bottom 1`] = `
<div
  className="Popover"
  data-caret="bottom"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of bottom-left 1`] = `
<div
  className="Popover"
  data-caret="bottom-left"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of bottom-right 1`] = `
<div
  className="Popover"
  data-caret="bottom-right"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of left 1`] = `
<div
  className="Popover"
  data-caret="left"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of left-bottom 1`] = `
<div
  className="Popover"
  data-caret="left-bottom"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of left-top 1`] = `
<div
  className="Popover"
  data-caret="left-top"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of right 1`] = `
<div
  className="Popover"
  data-caret="right"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of right-bottom 1`] = `
<div
  className="Popover"
  data-caret="right-bottom"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of right-top 1`] = `
<div
  className="Popover"
  data-caret="right-top"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of top 1`] = `
<div
  className="Popover"
  data-caret="top"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of top-left 1`] = `
<div
  className="Popover"
  data-caret="top-left"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;

exports[`Popover renders correctly for a caret position of top-right 1`] = `
<div
  className="Popover"
  data-caret="top-right"
  data-open=""
>
  <div
    className="PopoverContent"
    data-height="fit-content"
    data-overflow="auto"
    data-width="small"
  >
    Hello!
  </div>
</div>
`;
